--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="fixed top-0 w-full z-50 glass border-b border-yellow-500/30 px-4 py-3 flex justify-between items-center">
         <h1 class="font-orbitron text-xl font-bold text-yellow-400">EFOOTBALL<span class="text-white">2024</span></h1>
         <div class="flex items-center gap-4 text-xs">
-            <span class="glass px-3 py-1 rounded text-yellow-400" id="dateDisplay">📅 Loading...</span>
+            <span class="glass px-3 py-1 rounded text-yellow-400" id="dateDisplay">📅 actual date</span>
             <span class="glass px-3 py-1 rounded" id="connStatus">
                 <span id="connDot" class="offline-dot"></span>
                 <span id="connText">Offline</span>
@@ -98,7 +98,7 @@
                 <h2 class="font-orbitron text-3xl font-bold text-yellow-400 mb-2">KONAMIST</h2>
                 <p class="text-gray-300 mb-6">16 Players. Live Tournament.</p>
                 <input type="text" id="username" placeholder="Your username" class="w-full px-4 py-3 rounded bg-black/50 border border-yellow-500/50 text-white text-center mb-4">
-                <button onclick="enter()" class="w-full py-3 rounded gold-btn text-lg">ENTER</button>
+                <button onclick="proceed ()" class="w-full py-3 rounded gold-btn text-lg">PROCEED</button>
             </div>
         </div>
 
