--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>eFootball 2026 Tournament</title>
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Arial,sans-serif}
+body{background:url('https://kimi-web-img.moonshot.cn/img/images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/1eb6b82c6d1bc5db3fe29e12f549d8793503a6c2.png') center/cover fixed #000;color:#fff;min-height:100vh}
+.overlay{background:rgba(0,0,0,.85);min-height:100vh;padding:20px}
+.container{max-width:1200px;margin:0 auto}
+h1{text-align:center;font-size:2.5em;margin-bottom:10px;text-shadow:0 0 20px #0ff;background:linear-gradient(90deg,#0ff,#f0f);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.card{background:rgba(255,255,255,.1);backdrop-filter:blur(10px);border-radius:15px;padding:20px;margin:15px 0;border:1px solid rgba(255,255,255,.2)}
+input,select,button{width:100%;padding:12px;margin:8px 0;border:none;border-radius:8px;background:rgba(255,255,255,.15);color:#fff;border:1px solid rgba(255,255,255,.3)}
+input::placeholder{color:#aaa}
+button{background:linear-gradient(45deg,#00d4ff,#7b2cbf);cursor:pointer;font-weight:bold;transition:.3s}
+button:hover{transform:scale(1.02);box-shadow:0 0 20px rgba(0,212,255,.5)}
+.hidden{display:none !important}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px}
+table{width:100%;border-collapse:collapse;margin-top:10px}
+th,td{padding:12px;text-align:left;border-bottom:1px solid rgba(255,255,255,.2)}
+th{background:rgba(0,212,255,.3)}
+tr:hover{background:rgba(255,255,255,.05)}
+.lootbox{width:200px;height:200px;margin:20px auto;background:linear-gradient(45deg,#ffd700,#ff6b6b);border-radius:20px;display:flex;align-items:center;justify-content:center;font-size:3em;cursor:pointer;transition:.3s;box-shadow:0 0 30px rgba(255,215,0,.5);position:relative;overflow:hidden}
+.lootbox.spin{animation:spin .5s linear infinite}
+@keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
+.winner{background:linear-gradient(45deg,#00ff88,#00d4ff) !important;animation:pulse 1s infinite}
+@keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.05)}}
+.nav{display:flex;gap:10px;justify-content:center;margin-bottom:20px;flex-wrap:wrap}
+.nav button{width:auto;padding:10px 20px}
+.match{display:flex;justify-content:space-between;align-items:center;padding:15px;background:rgba(255,255,255,.05);border-radius:10px;margin:10px 0}
+.vs{font-size:2em;font-weight:bold;color:#ffd700}
+.upload-area{border:2px dashed rgba(255,255,255,.3);padding:20px;text-align:center;border-radius:10px;cursor:pointer;transition:.3s}
+.upload-area:hover{border-color:#00d4ff;background:rgba(0,212,255,.1)}
+#liveFeed{max-height:300px;overflow-y:auto}
+.feed-item{padding:10px;border-left:3px solid #00d4ff;margin:5px 0;background:rgba(255,255,255,.05);animation:slideIn .3s}
+@keyframes slideIn{from{opacity:0;transform:translateX(-20px)}}
+.badge{display:inline-block;padding:4px 8px;border-radius:12px;font-size:.8em;background:#00d4ff;color:#000;margin-left:5px}
+</style>
+</head>
+<body>
+<div class="overlay">
+<div class="container">
+<h1>⚽ eFootball 2026 Tournament</h1>
 
+<div id="login" class="card">
+<h2>👋 Welcome Coach!</h2>
+<input type="text" id="username" placeholder="Enter Username" required>
+<input type="text" id="coach" placeholder="Coach Name" required>
+<input type="number" id="strength" placeholder="Team Strength (Any Number)" required>
+<input type="text" id="player" placeholder="Favorite Player" required>
+<select id="division" required>
+<option value="">Select Division</option>
+<option value="1">Division 1</option>
+<option value="2">Division 2</option>
+<option value="3">Division 3</option>
+<option value="4">Division 4</option>
+<option value="5">Division 5</option>
+<option value="6">Division 6</option>
+<option value="7">Division 7</option>
+<option value="8">Division 8</option>
+<option value="9">Division 9</option>
+</select>
+<button onclick="register()">Enter Tournament</button>
+</div>
+
+<div id="dashboard" class="hidden">
+<div class="nav">
+<button onclick="showTab('loot')">🎲 Matchmaking</button>
+<button onclick="showTab('table')">📊 League Table</button>
+<button onclick="showTab('upload')">📸 Upload Result</button>
+<button onclick="showTab('live')">🔴 Live Updates</button>
+</div>
+
+<div id="loot" class="card">
+<h2>🎲 Loot Box Matchmaking</h2>
+<p style="text-align:center">Click to spin and find your opponent!</p>
+<div class="lootbox" id="box" onclick="spinBox()">🎲</div>
+<div id="matchResult" style="text-align:center;margin-top:20px"></div>
+</div>
+
+<div id="table" class="card hidden">
+<h2>📊 Tournament Standings</h2>
+<table>
+<thead><tr><th>Pos</th><th>Coach</th><th>P</th><th>W</th><th>D</th><th>L</th><th>GF</th><th>GA</th><th>GD</th><th>Pts</th></tr></thead>
+<tbody id="standings"></tbody>
+</table>
+</div>
+
+<div id="upload" class="card hidden">
+<h2>📸 Upload Match Result</h2>
+<div class="grid">
+<div>
+<input type="text" id="p1" placeholder="Player 1" required>
+<input type="text" id="p2" placeholder="Player 2" required>
+<input type="number" id="s1" placeholder="Score 1" required>
+<input type="number" id="s2" placeholder="Score 2" required>
+</div>
+<div>
+<div class="upload-area" onclick="document.getElementById('ss').click()">
+<p>📷 Click to upload Screenshot</p>
+<input type="file" id="ss" accept="image/*" style="display:none" onchange="preview(this)">
+<img id="preview" style="max-width:100%;margin-top:10px;display:none;border-radius:8px">
+</div>
+</div>
+</div>
+<button onclick="submitMatch()">Submit Result</button>
+</div>
+
+<div id="live" class="card hidden">
+<h2>🔴 Live Tournament Feed</h2>
+<div id="liveFeed"></div>
+</div>
+</div>
+
+<audio id="bgMusic" loop>
+<source src="tems-me-and-u.mp3" type="audio/mpeg">
+</audio>
+<button onclick="toggleMusic()" style="position:fixed;bottom:20px;right:20px;width:auto;border-radius:50%;width:50px;height:50px">🎵</button>
+</div>
+</div>
+
+<script>
+const db={players:[],matches:[],feed:[]};
+let currentUser=null,spinning=false;
+function register(){const u=document.getElementById('username').value,c=document.getElementById('coach').value,s=document.getElementById('strength').value,p=document.getElementById('player').value,d=document.getElementById('division').value;if(!u||!c||!s||!p||!d)return alert('Fill all fields!');currentUser={u,c,s,p,d,w:0,pl:0,pts:0,gf:0,ga:0,gd:0};db.players.push(currentUser);document.getElementById('login').classList.add('hidden');document.getElementById('dashboard').classList.remove('hidden');addFeed(`🎉 ${c} joined Division ${d}!`);updateTable();}
+function showTab(t){['loot','table','upload','live'].forEach(x=>document.getElementById(x).classList.add('hidden'));document.getElementById(t).classList.remove('hidden');if(t==='table')updateTable();}
+function spinBox(){if(spinning||db.players.length<2)return;spinning=true;const b=document.getElementById('box'),m=document.getElementById('matchResult');b.classList.add('spin');m.innerHTML='Spinning...';setTimeout(()=>{b.classList.remove('spin');const o=db.players.filter(x=>x.u!==currentUser.u);const r=o[Math.floor(Math.random()*o.length)];m.innerHTML=`<div class="match"><span>${currentUser.c}</span><span class="vs">VS</span><span>${r.c}</span></div><p>Division ${currentUser.d} vs Division ${r.d}</p>`;b.classList.add('winner');setTimeout(()=>b.classList.remove('winner'),2000);spinning=false;},2000);}
+function updateTable(){const t=document.getElementById('standings');t.innerHTML=db.players.sort((a,b)=>b.pts-a.pts||b.gd-a.gd).map((p,i)=>`<tr><td>${i+1}</td><td>${p.c}<span class="badge">Div ${p.d}</span></td><td>${p.pl}</td><td>${p.w}</td><td>${p.pl-p.w-Math.abs(p.pl-p.w)}</td><td>${Math.abs(p.pl-p.w-(p.pl-p.w-Math.abs(p.pl-p.w)))}</td><td>${p.gf}</td><td>${p.ga}</td><td>${p.gd>0?'+':''}${p.gd}</td><td><b>${p.pts}</b></td></tr>`).join('');}
+function preview(i){const f=i.files[0];if(f){const r=new FileReader();r.onload=e=>{document.getElementById('preview').src=e.target.result;document.getElementById('preview').style.display='block'};r.readAsDataURL(f);}}
+function submitMatch(){const p1=document.getElementById('p1').value,p2=document.getElementById('p2').value,s1=parseInt(document.getElementById('s1').value),s2=parseInt(document.getElementById('s2').value);if(!p1||!p2||isNaN(s1)||isNaN(s2))return alert('Fill all scores!');const u1=db.players.find(x=>x.c===p1),u2=db.players.find(x=>x.c===p2);if(!u1||!u2)return alert('Players not found!');u1.pl++;u2.pl++;u1.gf+=s1;u1.ga+=s2;u2.gf+=s2;u2.ga+=s1;u1.gd=u1.gf-u1.ga;u2.gd=u2.gf-u2.ga;if(s1>s2){u1.w++;u1.pts+=3;addFeed(`⚽ ${p1} beat ${p2} ${s1}-${s2}!`);}else if(s2>s1){u2.w++;u2.pts+=3;addFeed(`⚽ ${p2} beat ${p1} ${s2}-${s1}!`);}else{u1.pts++;u2.pts++;addFeed(`🤝 ${p1} drew with ${p2} ${s1}-${s2}`);}updateTable();showTab('table');}
+function addFeed(m){const time=new Date().toLocaleTimeString();db.feed.unshift({t:time,m});document.getElementById('liveFeed').innerHTML=db.feed.map(x=>`<div class="feed-item"><small>${x.t}</small><br>${x.m}</div>`).join('');}
+function toggleMusic(){const a=document.getElementById('bgMusic');a.paused?a.play():a.pause();}
+setInterval(()=>{if(Math.random()>0.7)addFeed('💬 Tournament update: '+['New player joined!','Match starting soon','Leaderboard updated','Semi-finals approaching'][Math.floor(Math.random()*4)]);},30000);
+</script>
+</body>
+  </html>
